--- a/alembic.ini
+++ b/alembic.ini
@@ -50,7 +50,7 @@ version_path_separator = os  # default: use os.pathsep
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://admin:admin@localhost/ap_4?charset=utf8mb4
+sqlalchemy.url = mysql://root:password@localhost/ap_4
 
 
 [post_write_hooks]
